Change header content container to 96% width to fix whitespace problem on mobile

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -168,7 +168,7 @@ and (max-width: $mobile_max) {
       }
     }
     .content {
-      width: 100%;
+      width: 96%;
       h1 {
         font-size: 32px;
         line-height: 34px;
